-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.0
-
None
-
-
61e291688f (qt-creator/qt-creator/8.0) 61e291688f (qt-creator/qt-creator/master) 61e291688f (qt-creator/tqtc-qt-creator/8.0)
A very handy feature is the ability to drag a function from the Outline into the editor panel. This existed with the clang / built-in code model, but isn't available with clangd. It appears that dragging files from Projects into the editor works without issues using clangd, however. I've attached a test project, if needed.
| For Gerrit Dashboard: QTCREATORBUG-27502 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 418753,2 | LanguageClient: outline drag support | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |